<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">甛觅Mru</string>
    <string name="rmb">元</string>
    <string name="second">秒</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="success_str">成功</string>
    <string name="year">年</string>
    <string name="percent">%</string>
    <string name="ju">。</string>
    <string name="ok">好</string>
    <string name="red_pack">红包</string>
    <string name="gift">礼物</string>
    <string name="upload_fail">上传失败</string>
    <string name="file_too_big">文件大小应该在50M以内</string>
    <string name="system_error">请检查网络连接！</string>
    <string name="vip_free">VIP 免费</string>
    <string name="pay_success">消费成功</string>
    <string name="pay_fail">赠送失败</string>
    <string name="reward_success">赠送成功</string>
    <string name="add">+</string>
    <string name="sub">-</string>
    <string name="rmb_des">¥</string>
    <string name="me">我</string>
    <string name="multi">x</string>
    <string name="multi_one">x1</string>
    <string name="accept">接听</string>
    <string name="hang_up">挂断</string>
    <string name="pay">支付</string>
    <string name="pay_vip_success">支付成功</string>
    <string name="pay_vip_fail">支付失败</string>
    <string name="see_rule">查看规则</string>
    <string name="been_suspend">对不起,由于您违反了平台相关规定,账号已被封禁</string>
    <string name="swtich_off_alert_video">关闭后你将收不到视频邀请</string>
    <string name="swtich_off_alert_audio">关闭后你将收不到语音邀请</string>
    <string name="swtich_off_alert_private">关闭后你将收不到私聊消息</string>
    <string name="notice_title">小提示</string>
    <string name="update_now">立即更新</string>
    <string name="clear_all">清空</string>
    <string name="free_one">免费</string>
    <string name="charge_one">付费</string>
    <string name="see_video_need">查看本视频需要支付:</string>
    <string name="male_not">暂未开放男主播认证</string>
    <string name="qq_fail">获取QQ登录信息失败,请换其他方式登录</string>
    <string name="we_chat_fail">获取微信登录信息失败,请换其他方式登录</string>
    <string name="can_not_communicate">暂未开放未认证用户之间交流</string>
    <string name="sex_can_not_communicate">暂未开放同性用户之间交流</string>
    <string name="nine_nine">99+</string>
    <string name="message_sound">消息提示音</string>
    <string name="message_vibrate">消息提示震动</string>
    <string name="group_message_sound">群消息提示音</string>
    <string name="group_message_vibrate">群消息提示震动</string>
    <string name="my_active">我的动态</string>
    <string name="data_get_error">数据获取失败</string>
    <string name="data_getting">正在获取数据中</string>
    <string name="data_age">%s岁</string>
    <string name="token_invalid">登录失效，请重新登录</string>
    <string name="data_retry">加载失败，点击重试</string>
    <string name="black_list">黑名单</string>
    <string name="black_alert">确定将%s加入黑名单吗?</string>
    <string name="black_add_ok">成功加入黑名单</string>
    <string name="black_remove">移除黑名单</string>
    <string name="gold">约豆</string>
    <string name="gold_des"> (约豆)</string>
    <string name="gold_des_one"> 约豆</string>
    <string name="zero">0</string>
    <string name="charge">充值</string>
    <string name="help_center">常见问题</string>
    <string name="green_agree">甛觅Mru直播协议书</string>
    <string name="clear_cache">清除缓存</string>
    <string name="apply_company">申请公会</string>
    <string name="actor_ing">主播审核中</string>
    <string name="apply_company_ing_des">你的公会正在审核中,请勿重复提交</string>
    <string name="reject">拒绝</string>
    <string name="accept_des">接受</string>
    <string name="invite_you">邀请你加入</string>
    <string name="company">公会</string>
    <string name="operate_success">操作成功</string>
    <string name="operate_fail">操作失败</string>
    <string name="belong_company">所属公会: %s</string>
    <string name="company_down">你的公会已下架,请联系客服</string>
    <string name="account_left">账户余额</string>
    <string name="apply_actor">申请主播</string>
    <string name="home">首页</string>
    <string name="focus">关注</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="dynamic">动态</string>
    <string name="main_rank">排行榜</string>
    <string name="main_message">消息</string>
    <string name="main_mine">我的</string>
    <string name="edit_verify_info">编辑资料</string>
    <string name="nick">昵称</string>
    <string name="please_input_nick">请输入昵称 (必填)</string>
    <string name="please_input_nick_des">请输入昵称</string>
    <string name="job">职业</string>
    <string name="model">模特</string>
    <string name="please_input_job">请选择职业</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="we_chat_number">微信号</string>
    <string name="qq_number">QQ号</string>
    <string name="please_input_we_chat">请输入微信号</string>
    <string name="please_input_qq">请输入QQ号</string>
    <string name="modify_age">年龄</string>
    <string name="age_title">年龄(岁)</string>
    <string name="eighteen">18</string>
    <string name="age_des">岁</string>
    <string name="modify_age_des">请选择年龄</string>
    <string name="height">身高</string>
    <string name="one_hundred_and_sixty">160</string>
    <string name="high_des">cm</string>
    <string name="high_title_des">身高(cm)</string>
    <string name="please_input_height">请选择身高</string>
    <string name="weight">体重</string>
    <string name="fourty_kg">40</string>
    <string name="body_des">kg</string>
    <string name="body_title_des">体重(kg)</string>
    <string name="please_input_weight">请选择体重</string>
    <string name="star">星座</string>
    <string name="marriage">婚姻</string>
    <string name="please_input_star">请选择星座</string>
    <string name="city">城市</string>
    <string name="choose_city">选择城市</string>
    <string name="please_input_city">请选择城市</string>
    <string name="sign">个性签名</string>
    <string name="submit_verify">确认修改</string>
    <string name="set_cover">封面</string>
    <string name="set_cover_long">设为封面</string>
    <string name="four_most">最多只能上传6张</string>
    <string name="delete_fail">删除失败</string>
    <string name="tags_not_select">您还未选择标签</string>
    <string name="edit_fail">编辑资料失败</string>
    <string name="file_not_exist">文件不存在,请重新选择</string>
    <string name="nick_repeat">昵称重复不可用</string>
    <string name="actor_at_least_upload_one">请至少上传一张图片作为封面</string>
    <string name="update_fail">更新失败</string>
    <string name="with_draw_money">提现明细</string>
    <string name="first_charge_rank">首冲排行</string>
    <string name="apply_verify">申请主播</string>
    <string name="apply_step_one">第一步  上传身份证正面照片</string>
    <string name="click_upload_head_image">点击上传照片</string>
    <string name="upload_head_image_notice">1.确保是本人真实照片, 正面照片。\n2.图片清晰可见, 色彩明亮。</string>
    <string name="upload_head_image_notice_one">1、确保身份证与本人照片相符;\n2、图片清晰可见, 色彩明亮。\n3、本照片仅用于认证,不会对外公开</string>
    <string name="notice_three">3.本图片仅作为认证使用,</string>
    <string name="notice_pink">不会对外公开</string>
    <string name="apply_step_three">第二步  上传本人正面照片</string>
    <string name="real_name">真实姓名</string>
    <string name="submit_verify_des">立即认证</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="please_input_id_card_number">请输入身份证号</string>
    <string name="picture_not_choose">您还未选择照片</string>
    <string name="law_des">认证即代表您已经阅读并同意</string>
    <string name="law_des_one"> 《甛觅Mru绿色直播协议书》</string>
    <string name="verify_fail">认证失败</string>
    <string name="verify_success">认证成功</string>
    <string name="id_card_picture_not_choose">您还未选择身份证正面照片</string>
    <string name="self_picture_not_choose">您还未选择本人正面照片</string>
    <string name="choose_again">上传失败,请重新选择</string>
    <string name="my_gold">我的约豆</string>
    <string name="service">客服</string>
    <string name="please_choose_money">请选择充值金额</string>
    <string name="account_detail">账单详情</string>
    <string name="charge_gold">充值约豆</string>
    <string name="with_draw_now">立即兑换</string>
    <string name="withdraw">提现</string>
    <string name="with_draw_not_select">未选择具体金额</string>
    <string name="account_not_bind">您还未绑定账号</string>
    <string name="please_choose_alipay_account">请选择支付宝账户</string>
    <string name="please_choose_wechat_account">请选择微信账户</string>
    <string name="apply_withdraw_success">申请提现成功</string>
    <string name="can_with_draw_one">可提现约豆</string>
    <string name="bind_now">立即绑定</string>
    <string name="need_gold">所需约豆:</string>
    <string name="with_draw_need_know">提现须知：\n1，提现当日到账（17点以前提现当日到账，17点以后提现次日上班打款）。\n2，提现仅支持支付宝，请上传支付宝收款码和填写正确的支付宝账号和姓名。\n3，每人每天只能提现一次。
</string>
    <string name="checking">审核中</string>
    <string name="ali_pay_des">支付宝提现</string>
    <string name="we_chat_des">微信提现</string>
    <string name="month">月</string>
    <string name="all">全部</string>
    <string name="withdraw_ing">提现中</string>
    <string name="withdraw_successful">提现成功</string>
    <string name="withdraw_fail">提现失败</string>
    <string name="with_draw_total">提现总额 (元)</string>
    <string name="quick">速配</string>
    <string name="age"> 岁</string>
    <string name="free">在线</string>
    <string name="offline">离线</string>
    <string name="busy">忙碌</string>
    <string name="system_message">系统消息</string>
    <string name="click_to_see">点击查看最新消息</string>
    <string name="chat_user">聊友: </string>
    <string name="chat_group">群消息</string>
    <string name="video_chat">视频聊天</string>
    <string name="audio_chat">语音聊天</string>
    <string name="complain">投诉举报</string>
    <string name="report">黑名单</string>
    <string name="report_des">投诉</string>
    <string name="complain_fail">投诉失败</string>
    <string name="warn">甛觅Mru倡导绿色交友, 严禁低俗,  色情,  诱导,  暴力,  赌博,\n反动等不良内容,  一旦涉及将被屏蔽或封停账号,  网警\n24小时在线巡查,  敬请配合</string>
    <string name="yellow_warning">系统检测到你可能存在不规范行为，视频将在10秒后断开！</string>
    <string name="have_focus">已关注</string>
    <string name="person_info">个人信息</string>
    <string name="last_time">最后登录</string>
    <string name="receive_red">收到打赏</string>
    <string name="tag_info">标签</string>
    <string name="actor_tag">自评形象</string>
    <string name="user_comment">用户评价</string>
    <string name="send_red">发红包</string>
    <string name="private_video">私密视频</string>
    <string name="private_image">私密照片</string>
    <string name="busy_actor">您拨打的用户正忙,请稍候再拨</string>
    <string name="not_online">对方不在线</string>
    <string name="not_bother">对方设置了勿扰</string>
    <string name="lazy">TA很懒，没有填写个性签名！</string>
    <string name="lazy_one">您还没有填写个性签名</string>
    <string name="can_use_gold">可用约豆: </string>
    <string name="gold_not_enough">约豆余额不足</string>
    <string name="month_every_one">¥ </string>
    <string name="info_block_des">该主播不允许他人查看TA的%1$s</string>
    <string name="see_info_number_des">查看该主播%1$s需支付%2$s约豆</string>
    <string name="save_safely">安全修改</string>
    <string name="note_one">温馨提示:</string>
    <string name="note_two">1.请填写微信中绑定银行卡时填写的真实姓名(请不要填昵称)</string>
    <string name="note_three">2.为了保证顺利提现,30天内不要更换其他账号,否则会导致提现不通过</string>
    <string name="note_four">3.我们承诺不会向任何人透露你的个人信息</string>
    <string name="share_to">分享到</string>
    <string name="notice_one">注:</string>
    <string name="day_rank">日榜</string>
    <string name="week_rank">周榜</string>
    <string name="month_rank">月榜</string>
    <string name="total_rank">总榜</string>
    <string name="wechat_account_number">微信账号</string>
    <string name="please_input_we_chat_account">请输入微信账号</string>
    <string name="copy_link">复制链接</string>
    <string name="upload_money_code">上传收款码</string>
    <string name="click_upload_money_code">点击\n上传收款码</string>
    <string name="money_code_note">请上传和真实姓名，收款方式一致的收款码。</string>
    <string name="young_notice">为保护未成年人健康成长,甛觅Mru特别推出未成年模式,该模式下可以禁止所有功能,如需使用,请设置密码保护。</string>
    <string name="set_young_mode">设置未成年模式 ></string>
    <string name="i_know">我知道了</string>
    <string name="young_mode_have_close">未成年模式已关闭</string>
    <string name="open_young_mode">开启未成年模式,可防未成年人使用</string>
    <string name="open_young_mode_one">开启未成年模式</string>
    <string name="input_password">输入密码</string>
    <string name="need_independent_password">启动未成年模式,需要设置独立密码</string>
    <string name="next_step">下一步</string>
</resources>