<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/input_password"
        android:textColor="@color/black_333333"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/des_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/need_independent_password"
        android:textColor="@color/gray_868686"
        android:textSize="13sp" />

    <com.lovechatapp.chat.view.PwdEditText
        android:id="@+id/pass_code_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp" />

    <!--操作-->
    <TextView
        android:id="@+id/option_tv"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/shape_open_button_back"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/white"
        android:textSize="17sp" />

</LinearLayout>