<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/share_to"
            android:textColor="@color/black_text"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/copy_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|right"
            android:layout_marginRight="10dp"
            android:text="@string/copy_link"
            android:visibility="gone"
            android:textColor="@color/black_3f3b48"
            android:textSize="15sp" />
    </FrameLayout>

    <View style="@style/HorizontalDivideLine" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/content_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View style="@style/HorizontalDivideLine" />

    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/cancel"
        android:textColor="@color/gray_666666"
        android:textSize="15sp" />

</LinearLayout>