<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/shape_young_mode_back"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/young_lock"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/young_notice"
            android:textColor="@color/gray_868686"
            android:textSize="15sp" />

        <!--设置未成年模式-->
        <TextView
            android:id="@+id/set_mode_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/set_young_mode"
            android:textColor="@color/red_fe2947"
            android:textSize="15sp" />

        <View
            style="@style/HorizontalDivideLine"
            android:layout_marginTop="20dp" />

        <!--我知道了-->
        <TextView
            android:id="@+id/i_know_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/i_know"
            android:textColor="@color/black_333333"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>